# HeatWatch

./: .gitignore  CONTRIBUTING.MD  CONTRIBUTING.md  LICENSE  README.es.md  README.md  README.md.save  ROADMAP.MD  pyproject.toml
.github/workflows/: ci.yml
data/cities/: registry.yaml
data/sample/detroit/: neighborhoods.geojson
data/sample/phoenix/: neighborhoods.geojson
data/sample/san_juan/: neighborhoods.geojson
docs/: data-sources.md
heatwatch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: cli.py
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
src/analysis/: lst.py  map_export.py  ndvi.py  vulnerability.py
src/api/: main.py
src/cli/: main.py.save
src/utils/: city_registry.py  geo_utils.py
tests/: conftest.py  test_city_registry.py  test_lst.py  test_map_export.py  test_ndvi.py  test_vulnerability.py
